--- a/cdk-cart-service/package.json
+++ b/cdk-cart-service/package.json
@@ -13,15 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.9",
+    "aws-cdk": "2.148.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
-    "aws-cdk": "2.148.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.5.3"
   },
   "dependencies": {
+    "@nestjs/typeorm": "^10.0.2",
     "aws-cdk-lib": "2.148.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "typeorm": "^0.3.20"
   }
 }
