--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/orm.datasource.ts",
-    "db:drop": "npm run typeorm schema:drop",
     "db:create": "npm run typeorm migration:generate",
     "db:migrate": "npm run typeorm migration:run",
+    "db:drop": "npm run typeorm schema:drop",
     "start:combined": "npm run db:migrate && npm run start:watch"
   },
   "dependencies": {
@@ -32,6 +32,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
